# keti-robot-master

./: .gitignore  CMakeLists.txt  package.xml
scripts/: dsr_robot_test.py  dsr_robot_test_keyop.py
scripts/robot_module/: RPP_functions.py  robot_master.py
scripts/robot_module/gripper/: keti_schunk_gripper.py  keti_schunk_gripper_v2.py  keti_schunk_gripper_v3.py  keti_zimmer_gripper.py  keti_zimmer_gripper_v1.py  keti_zimmer_gripper_v2.py  keti_zimmer_gripper_v3.py
scripts/robot_module/robot/: Parent_Robot.py  robot_slave.py
